--- a/index.html
+++ b/index.html
@@ -286,36 +286,28 @@
                         <h2 class="section__heading">Naši prijatelji</h2>
                     </div>
                 </div>
+                <div class="col-md-3 text-center">
+                    <a href="https://www.protectiondogs.co.uk/" target="_blank">
+                        <img src="./img/PDW.png" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 text-center">
+                    <a href="http://www.alesvet.com/" target="_blank">
+                        <img src="./img/alesvet.png" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 text-center">
+                        <a href="https://www.protectiondogs.co.uk/" target="_blank">
+                            <img src="./img/bj.png" alt="">
+                        </a>
+                </div>
+                <div class="col-md-3 text-center">
+                        <a href="https://www.protectiondogs.co.uk/" target="_blank">
+                            <img src="./img/bi.png" alt="">
+                        </a>
+                </div>
             </div>
         </section>
-        <!-- <div class="carousel">
-            <div class="carousel__inner">
-                <div>
-                    <img src="img/maps-and-flags.svg" alt="parking icon"> Parking
-                </div>
-                <div>
-                    <img src="img/wifi.svg" alt="wifi icon"> WiFi
-                </div>
-                <div>
-                    <img src="img/bus.svg" alt="bus icon"> Public transport
-                </div>
-                <div>
-                    <img src="img/photographer-with-cap-and-glasses.svg" alt="tourist icon"> Tours and vacation services
-                </div>
-                <div>
-                    <img src="img/hotel.svg" alt="hotel icon"> Pick up service from accommodation
-                </div>
-                <div>
-                    <img src="img/user.svg" alt="user icon"> Local guide
-                </div>
-                <div>
-                    <img src="img/car.svg" alt="car icon"> Pick up service from airport
-                </div>
-                <div>
-                    <img src="img/translation.svg" alt="translate icon"> Translation services
-                </div>
-            </div>
-        </div> -->
 
         <!-- OVERFLOW -->
         <section class="bottom__padding">
@@ -323,7 +315,7 @@
                 <h2 class="section__heading">Gde se nalazimo</h2>
             </div>
             <iframe class="google_map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2824.3553829170273!2d20.211297915215393!3d44.93644297909819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a5eae155df4eb%3A0x64cbb8143fccd6d2!2z0JbQtdC70LXQt9C90LjRh9C60LAgMTA5LCDQndC-0LLQsCDQn9Cw0LfQvtCy0LAgMjIzMzA!5e0!3m2!1ssr!2srs!4v1533991009030"
-            height="450" scrolling="no" frameborder="0" style="border:0" allowfullscreen></iframe>
+                height="450" scrolling="no" frameborder="0" style="border:0" allowfullscreen></iframe>
         </section>
         <section class="contact__block">
             <div class="container">
