friends section fix

--- a/index.html
+++ b/index.html
@@ -297,18 +297,27 @@
                     </div>
                 </div>
                 <div class="col-md-3 text-center">
-                    <a href="https://www.protectiondogs.co.uk/" target="_blank">
+                    <a class="d-block friend__block" href="https://www.protectiondogs.co.uk/" target="_blank">
+                        <div class="overlay">
+                            <h5>Protection dogs worldwide</h5>
+                        </div>
                         <img src="./img/PDW.png" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 text-center">
-                    <a href="http://www.alesvet.com/" target="_blank">
+                    <a class="d-block friend__block" href="http://www.alesvet.com/" target="_blank">
+                        <div class="overlay">
+                            <h5>Veterinarska ambulanta Alessandra</h5>
+                        </div>
                         <img src="./img/alesvet.png" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 text-center">
-                    <div data-toggle="modal" data-target="#transport">
-                        <img src="./img/bj.png" alt="">
+                    <div class="friend__block" data-toggle="modal" data-target="#transport">
+                            <div class="overlay">
+                                    <h5>Transport pasa Boban Janković</h5>
+                                </div>
+                        <img src="./img/bj.PNG" alt="">
                     </div>
                     <div class="modal fade" id="transport" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
@@ -323,7 +332,10 @@
                     </div>
                 </div>
                 <div class="col-md-3 text-center">
-                    <div data-toggle="modal" data-target="#dresura">
+                    <div class="friend__block" data-toggle="modal" data-target="#dresura">
+                            <div class="overlay">
+                                    <h5>Dresura pasa Boško Ivkov</h5>
+                                </div>
                         <img src="./img/bi.png" alt="">
                     </div>
                     <div class="modal fade" id="dresura" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
