fixed friends section

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                         <h2 class="section__heading">Naši prijatelji</h2>
                     </div>
                 </div>
-                <div class="col-md-3 text-center">
+                <div class="col-sm-3 col-xs-12 text-center">
                     <a class="d-block friend__block" href="https://www.protectiondogs.co.uk/" target="_blank">
                         <div class="overlay">
                             <h5>Protection dogs worldwide</h5>
@@ -304,7 +304,7 @@
                         <img src="./img/PDW.png" alt="">
                     </a>
                 </div>
-                <div class="col-md-3 text-center">
+                <div class="col-sm-3 col-xs-12 text-center">
                     <a class="d-block friend__block" href="http://www.alesvet.com/" target="_blank">
                         <div class="overlay">
                             <h5>Veterinarska ambulanta Alessandra</h5>
@@ -312,7 +312,7 @@
                         <img src="./img/alesvet.png" alt="">
                     </a>
                 </div>
-                <div class="col-md-3 text-center">
+                <div class="col-sm-3 col-xs-12 text-center">
                     <div class="friend__block" data-toggle="modal" data-target="#transport">
                             <div class="overlay">
                                     <h5>Transport pasa Boban Janković</h5>
@@ -323,15 +323,18 @@
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-body">
+                                    <img src="./img/bj.PNG" alt="">
                                     <h3>Transport pasa Boban Janković</h3>
-                                    <p>Za sve naše klijente smo obezbedili transport za pse širom sveta</p>
-                                    <p>+381 63 214 145</p>
+                                    <div class="content">
+                                        <p>Za sve naše klijente smo obezbedili transport za pse širom sveta</p>
+                                        <p>Broj telefona: +381 63 214 145</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 text-center">
+                <div class="col-sm-3 col-xs-12 text-center">
                     <div class="friend__block" data-toggle="modal" data-target="#dresura">
                             <div class="overlay">
                                     <h5>Dresura pasa Boško Ivkov</h5>
@@ -342,6 +345,7 @@
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-body">
+                                    <img src="./img/bi.png" alt="">
                                     <h3>Dresura pasa sa Boškom Ivkov</h3>
                                     <ul>
                                         <li>Licencirani WUSV markirant 2003-2005</li>
