fixed contact form

--- a/index.html
+++ b/index.html
@@ -378,22 +378,22 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="heading__block" id="contact__block">
-                            <h2 class="section__heading">Contact us</h2>
+                            <h2 class="section__heading">Kontaktirajte nas</h2>
                         </div>
                         <div class="form">
                             <form method="post" action="contact-page.php" class="ccform">
                                 <div class="col-12 input__block input-effect">
-                                    <input class="effect-16 input__field" type="text" placeholder="">
+                                    <input name="name" id="name__input" class="effect-16 input__field form__input" type="text" placeholder="">
                                     <label>Ime</label>
                                     <span class="focus-border"></span>
                                 </div>
                                 <div class="col-12 input__block input-effect">
-                                    <input class="effect-16 input__field" type="text" placeholder="">
+                                    <input name="email" id="email__input" class="effect-16 input__field form__input" type="text" placeholder="">
                                     <label>Email</label>
                                     <span class="focus-border"></span>
                                 </div>
                                 <div class="col-12 input__block input-effect">
-                                    <textarea rows="8" class="textearea effect-16 input__field" type="text" placeholder=""></textarea>
+                                    <textarea name="message" id="text__input" rows="8" class="textearea effect-16 input__field form__input" type="text" placeholder=""></textarea>
                                     <label>Vaša poruka</label>
                                     <span class="focus-border"></span>
                                 </div>
@@ -413,16 +413,16 @@
 
         <!--   ALERT MESSAGE    -->
         <div class="alert__block alert__block-name">
-            <span>Please enter your name</span>
+            <span>Molimo Vas da unesete ime</span>
         </div>
         <div class="alert__block alert__block-email">
-            <span>Please enter your email</span>
+            <span>Molimo Vas da unesete email adresu</span>
         </div>
         <div class="alert__block alert__block-email-val">
-            <span>Please enter your email correctly</span>
+            <span>Molimo Vas da unesete email adresu ispravno</span>
         </div>
         <div class="alert__block alert__block-msg">
-            <span>Please enter your message</span>
+            <span>Molimo Vas da unesete poruku</span>
         </div>
 
         <div class="go_up">
@@ -439,13 +439,6 @@
 
         </div>
     </main>
-    <footer>
-        <p>
-            Made by
-            <a href="https://www.facebook.com/BeckS93xD" target="_blank">Aleksandar Beronja</a>
-            &copy; 2018
-        </p>
-    </footer>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
