--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -33,10 +33,10 @@
 <body>
 
   <div class="container">
-      <p class="thank_you wow fadeInUp">Thank you, your email has been successfully sent</p>
-      <p class="thank_you wow fadeInUp">We will respond quickly</p>
+      <p class="thank_you wow fadeInUp">Hvala Vam na poslatom upitu</p>
+      <p class="thank_you wow fadeInUp">Odgovorićemo Vam u najkraćem roku</p>
       <div class="thank_you_link wow fadeInUp">
-          <a href="index.html" class="thank_you_a">Go back to my page</a>
+          <a href="index.html" class="thank_you_a">Nazad na sajt</a>
       </div>
   </div>
 
